--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,27 +1,46 @@
 version: '3.9'
 
 services:
+    front_img:
+            container_name: APG_Front
+            build: 
+                context: ./file
+                dockerfile: Vue.Dockerfile
+            volumes:
+                - C:/Users/ykh05/Desktop/Project/APG/vue:/home/vue
+                - C:/Users/ykh05/Desktop/Project/APG/docker/nginx/sites-available:/etc/nginx/sites-available
+            ports:
+                - "80:80"
+            extra_hosts:
+                - "loc.apg.com:172.19.0.10"
+            privileged: true
+            command: /sbin/init
+            user: 0:0
+            environment:
+                TZ: "Asia/Seoul"
+            networks:
+                server_net:
+                    ipv4_address: "172.19.0.10"
     back_img:
-        container_name: APG_main
+        container_name: APG_back
         build: 
-            context: ./
-            dockerfile: Dockerfile
+            context: ./file
+            dockerfile: Spring.Dockerfile
         volumes:
-            - C:\Users\ykh05\Desktop\Project\APG\SpringBoot:/home/springboot
+            - C:/Users/ykh05/Desktop/Project/APG/springboot:/home/springboot
         ports:
             - "8080:8080"
-        extra_hosts:
-            - "loc.apg.com:172.19.0.10"
         privileged: true
+        command: /sbin/init
         user: 0:0
         environment:
             TZ: "Asia/Seoul"
         networks:
-            back_net:
-                ipv4_address: "172.19.0.10"
+            server_net:
+                ipv4_address: "172.19.0.20"
 
 networks:
-    back_net:
+    server_net:
         driver: bridge
         ipam:
             driver: default
