--- a/Vue/package.json
+++ b/Vue/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "vue-project",
+  "name": "vue",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vue-cli-service serve --port 3000"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "vue": "^3.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.5"
+    "vite": "^4.3.9"
   }
 }
