--- a/Vue/package.json
+++ b/Vue/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "serve": "vue-cli-service serve --port 3000"
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/cli-service": "^5.0.8",
-    "vue": "^3.3.2"
+    "bootstrap": "^5.3.0",
+    "bootstrap-vue": "^2.23.1",
+    "vue": "^3.3.2",
+    "@vue/compat": "^3.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "@vue/compiler-sfc": "^3.3.2"
   }
 }
