--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
                 - C:/Users/ykh05/Desktop/Project/APG/docker/nginx/sites-available:/etc/nginx/sites-available
             ports:
                 - "80:80"
+                - "3000:3000"
             extra_hosts:
                 - "loc.apg.com:172.19.0.10"
             privileged: true
@@ -21,23 +22,23 @@ services:
             networks:
                 server_net:
                     ipv4_address: "172.19.0.10"
-    back_img:
-        container_name: APG_back
-        build: 
-            context: ./file
-            dockerfile: Spring.Dockerfile
-        volumes:
-            - C:/Users/ykh05/Desktop/Project/APG/springboot:/home/springboot
-        ports:
-            - "8080:8080"
-        privileged: true
-        command: /sbin/init
-        user: 0:0
-        environment:
-            TZ: "Asia/Seoul"
-        networks:
-            server_net:
-                ipv4_address: "172.19.0.20"
+    # back_img:
+    #     container_name: APG_back
+    #     build: 
+    #         context: ./file
+    #         dockerfile: Spring.Dockerfile
+    #     volumes:
+    #         - C:/Users/ykh05/Desktop/Project/APG/spring:/home/spring
+    #     ports:
+    #         - "8080:8080"
+    #     privileged: true
+    #     command: /sbin/init
+    #     user: 0:0
+    #     environment:
+    #         TZ: "Asia/Seoul"
+    #     networks:
+    #         server_net:
+    #             ipv4_address: "172.19.0.20"
 
 networks:
     server_net:
