--- a/Vue/package.json
+++ b/Vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/compat": "^3.3.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "vue": "^3.3.2",
