20230615 백엔드서버 도커 컨테이너 구축

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -22,23 +22,23 @@ services:
             networks:
                 server_net:
                     ipv4_address: "172.19.0.10"
-    # back_img:
-    #     container_name: APG_back
-    #     build: 
-    #         context: ./file
-    #         dockerfile: Spring.Dockerfile
-    #     volumes:
-    #         - C:/Users/ykh05/Desktop/Project/APG/spring:/home/spring
-    #     ports:
-    #         - "8080:8080"
-    #     privileged: true
-    #     command: /sbin/init
-    #     user: 0:0
-    #     environment:
-    #         TZ: "Asia/Seoul"
-    #     networks:
-    #         server_net:
-    #             ipv4_address: "172.19.0.20"
+    back_img:
+        container_name: APG_back
+        build: 
+            context: ./file
+            dockerfile: Spring.Dockerfile
+        volumes:
+            - C:/Users/ykh05/Desktop/Project/APG/spring:/home/spring
+        ports:
+            - "8080:8080"
+        privileged: true
+        command: /sbin/init
+        user: 0:0
+        environment:
+            TZ: "Asia/Seoul"
+        networks:
+            server_net:
+                ipv4_address: "172.19.0.20"
 
 networks:
     server_net:
