--- a/Vue/package.json
+++ b/Vue/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
+    "compressorjs": "^1.2.1",
     "vue": "^3.3.2",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
