--- a/Vue/package.json
+++ b/Vue/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "compressorjs": "^1.2.1",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
