--- a/Vue/package.json
+++ b/Vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 3000",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
