--- a/Vue/package.json
+++ b/Vue/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "compressorjs": "^1.2.1",
+    "safe-buffer": "^5.2.1",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2",
@@ -20,6 +22,7 @@
     "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.2",
     "vite": "^4.3.9"
